# email-classification

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  TECHNICAL_SPEC.md  __init__.py  debug_detailed.py  debug_import.py  docker-compose.yml  pyproject.toml  requirements.txt  test_models_import.py
.cursor/rules/: error-handling-logging.mdc  fastapi-coding-standards.mdc  fastapi-project-structure.mdc  ml-model-integration.mdc  security-best-practices.mdc  terraform-standards.mdc  testing-standards.mdc
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  model_dependencies.py
app/api/endpoints/: __init__.py  predictions.py
app/core/: __init__.py  config.py  security.py
app/models/: __init__.py  ml_model.py
app/schemas/: __init__.py  health.py  prediction.py
app/services/: __init__.py  prediction_service.py  preprocessing.py
app/utils/: helpers.py
data/: Interview_vs_Non-Interview_Training_Emails__100_rows_.csv
scripts/: deploy-terraform.sh  download_nltk_data.py  test_api.py  test_ci.py  train.py
terraform/: .tflint.hcl  .trivyignore  README.md
terraform/modules/acm/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/ecs/: main.tf  outputs.tf  user_data.sh  variables.tf  versions.tf
terraform/modules/route53/: main.tf  outputs.tf  variables.tf  (+1 more)
tests/: __init__.py  conftest.py  test_api.py  test_preprocessing.py
tests/test_services/: __init__.py
(+15 files in other folders)
